--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,27 @@
 .outline {
   background-color: transparent!important;
 }
+/* smooth-loading.css */
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: white; /* Màu nền để làm mịn */
+  animation: fadeOut 0.5s ease-in-out; /* Hiệu ứng làm mịn */
+  pointer-events: none; /* Ngăn các tương tác trong lớp overlay */
+  z-index: 9999;
+}
 
 @layer base {
   * {
