--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
   width: 100vw;
   height: 100vh;
   background-color: white; /* Màu nền để làm mịn */
+  color:#00d8ff;
   animation: fadeOut 0.5s ease-in-out; /* Hiệu ứng làm mịn */
   pointer-events: none; /* Ngăn các tương tác trong lớp overlay */
   z-index: 9999;
